--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-#root {
-  width: 100%;
-  height: 100%;
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;600;700;800;900&display=swap");
+
+* {
+  font-family: "Archivo";
 }
